comment: ~Lv5 예외처리 구현 (Exception Handler)